// <auto-generated />
using System;
using Kanban.API.Persistence.Contexts;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

namespace kanban.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "3.1.8");

            modelBuilder.Entity("Kanban.API.Domain.Models.Board", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<bool>("IsVisible")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<int?>("UserId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("Boards");
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.Card", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("CardlistId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("CardlistId");

                    b.ToTable("Cards");

                    b.HasData(
                        new
                        {
                            Id = 100,
                            CardlistId = 100,
                            Name = "Card 100"
                        },
                        new
                        {
                            Id = 101,
                            CardlistId = 100,
                            Name = "Card 101"
                        });
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.Cardlist", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int?>("BoardId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<bool>("IsVisible")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("BoardId");

                    b.ToTable("Cardlists");

                    b.HasData(
                        new
                        {
                            Id = 100,
                            Description = "Demo Cardlist",
                            IsVisible = false,
                            Name = "Cardlist 100"
                        });
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<string>("Password")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.Board", b =>
                {
                    b.HasOne("Kanban.API.Domain.Models.User", null)
                        .WithMany("Boards")
                        .HasForeignKey("UserId");
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.Card", b =>
                {
                    b.HasOne("Kanban.API.Domain.Models.Cardlist", "Cardlist")
                        .WithMany("Cards")
                        .HasForeignKey("CardlistId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Kanban.API.Domain.Models.Cardlist", b =>
                {
                    b.HasOne("Kanban.API.Domain.Models.Board", null)
                        .WithMany("Cardlists")
                        .HasForeignKey("BoardId");
                });
#pragma warning restore 612, 618
        }
    }
}
